@@ -1,5 +1,5 @@
 #  -*-cperl-*-
-#  $Id: Pg.pm 12627 2009-03-24 01:00:58Z turnstep $
+#  $Id: Pg.pm 12634 2009-03-26 15:29:48Z turnstep $
 #
 #  Copyright (c) 2002-2009 Greg Sabino Mullane and others: see the Changes file
 #  Portions Copyright (c) 2002 Jeffrey W. Baker
@@ -17,7 +17,7 @@ use 5.006001;
 {
 	package DBD::Pg;
 
-	use version; our $VERSION = qv('2.11.8_1');
+	use version; our $VERSION = qv('2.11.8_2');
 
 	use DBI ();
 	use DynaLoader ();
@@ -433,6 +433,10 @@ use 5.006001;
 
 		my $remarks = 'pg_catalog.col_description(a.attrelid, a.attnum)';
 
+		my $column_def = $dbh->{private_dbdpg}{version} >= 80000
+			? 'pg_catalog.pg_get_expr(af.adbin, af.adrelid)'
+			: 'af.adsrc';
+
 		my $col_info_sql = qq!
 			SELECT
 				NULL::text AS "TABLE_CAT"
@@ -447,7 +451,7 @@ use 5.006001;
 				, NULL::text AS "NUM_PREC_RADIX"
 				, CASE a.attnotnull WHEN 't' THEN 0 ELSE 1 END AS "NULLABLE"
 				, $remarks AS "REMARKS"
-				, af.adsrc AS "COLUMN_DEF"
+				, $column_def AS "COLUMN_DEF"
 				, NULL::text AS "SQL_DATA_TYPE"
 				, NULL::text AS "SQL_DATETIME_SUB"
 				, NULL::text AS "CHAR_OCTET_LENGTH"
@@ -2157,13 +2161,14 @@ a database or a statement handle. Currently, all the hash values are undef.
 
 If set to true, then the L</disconnect> method will not be automatically called when 
 the database handle goes out of scope. This is required if you are forking, and even 
-then you must tread carefully and ensure that either the parent or the child handles 
-all database calls from that point forwards, so that messages from the Postgres backend 
-are only handled by one of the processes. If you don't set things up properly, you 
-will see messages such as "I<server closed the connection unexpectedly>". A better solution 
-is usually to rewrite your application not to use forking. See the section on 
-L</Asynchronous Queries> for a way to have your script continue to work while the database 
-is processing a request.
+then you must tread carefully and ensure that either the parent or the child (but not 
+both!) handles all database calls from that point forwards, so that messages from the 
+Postgres backend are only handled by one of the processes. If you don't set things up 
+properly, you will see messages such as "I<server closed the connection unexpectedly>", 
+and "I<message type 0x32 arrived from server while idle>". The best solution is to either 
+have the child process reconnect to the database with a fresh database handle, or to 
+rewrite your application not to use use forking. See the section on L</Asynchronous Queries> 
+for a way to have your script continue to work while the database is processing a request.
 
 =head3 B<RaiseError> (boolean, inherited)
 
