@@ -1,7 +1,7 @@
 ===================================================
 WARNING!!
 
-THIS IS A TEST VERSION (2.11.8_1) AND SHOULD BE USED 
+THIS IS A TEST VERSION (2.11.8_2) AND SHOULD BE USED 
 FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
 VERSION (no underscore) BY VISITING:
 
@@ -15,7 +15,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 2.11.8_1 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 2.11.8_2 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
