@@ -15,29 +15,29 @@ not run its Makefile.PL or Build.PL.
 Hash: RIPEMD160
 
 SHA1 2f324889a0b126216bf45a04d74803557c4a404e .perlcriticrc
-SHA1 9d5be20ad07592f9487fb5afe72780f8668a6aeb Changes
+SHA1 e7f11bf2452cfb54988f65855582fdf533ecc4a4 Changes
 SHA1 4d91c71e5dbb19ece1505ab75c36d00a744bb076 MANIFEST
 SHA1 6fd98d850a9a67911c047e7f0a8752fd15be98d7 MANIFEST.SKIP
-SHA1 b3d9067dee06f632f984324456e429fb5db3c1a6 META.yml
-SHA1 e4fd3cad807108302d9149c562ef152f1404255c Makefile.PL
+SHA1 abece35e4b79afd7ea302c4b1d2bdfca04d3f475 META.yml
+SHA1 849994bb0d799934ce737cc04130480fdfdb61cd Makefile.PL
 SHA1 23ff9a53497b927573048b7457d5eb8173d8b9b0 Pg.h
-SHA1 11688963d83860a20ba00308c72159c9c1a9a176 Pg.pm
+SHA1 5084148b107758485c55e35268dd04b3d45db87a Pg.pm
 SHA1 4e39c717f6050aff330b22e2bc52f6f2532d21c5 Pg.xs
-SHA1 a1f53271ddc4dd27a44f6cfe21ed31a0ecb7941a README
+SHA1 3f00d1bf5a7ac5ece65d64b7bbf0a0ef48d8eb27 README
 SHA1 8f20ecd6822bce2a39504beb087bdd341ace06f4 README.dev
 SHA1 7e213bf90f513595b59c0a2c4ef94fea1592efcf README.win32
 SHA1 fe7a42afdeec6a218c45f76e875cc3324b870956 TODO
-SHA1 1819d09761316924f71c823a83b59e6aebfc2089 dbdimp.c
+SHA1 2bef6d7ce41827d1fe32c9719ad7b625caa8cc02 dbdimp.c
 SHA1 3852dea79080d2c3e1ed9644fbbd6d25c2151c13 dbdimp.h
 SHA1 6c33bcf138e577722283bef02fceb8cbce4d100d dbivport.h
-SHA1 fbcc9c2989ba838f86616ef8df353a48407d1eee lib/Bundle/DBD/Pg.pm
+SHA1 c1c511e68a39ada02eca1cbc0f8d08d82e97de72 lib/Bundle/DBD/Pg.pm
 SHA1 fe02d60d99123a5bb17d65bea35ade9a9b8f1eb4 quote.c
 SHA1 0a1fdd0406c5c367a9aba366d1d35cfa8d5272ae quote.h
 SHA1 93aa7e8cae0a361d1e6163dea0281ebff41f3c5f t/00-signature.t
 SHA1 073baf503a601ceeb49516d61bd275f0c1e51563 t/00basic.t
 SHA1 f407ad828fe5898e1fa585523852b204ce9b5b2d t/01connect.t
 SHA1 1e0d8cad9de0063d4258739f6c8eb2cee27d9937 t/01constants.t
-SHA1 c3c85fc473a053d6ab11a75701d7f6628640ddc4 t/02attribs.t
+SHA1 85c9abd61b53c7cdd3efa690b81b2a9510e35fec t/02attribs.t
 SHA1 24f8c6b8d964ec0a9d0e6ebc1e29af16fba6aace t/03dbmethod.t
 SHA1 7ce47f4163e23b3f3df589487707257f5158001a t/03smethod.t
 SHA1 910d6c2234d77a74a49cf189b6c799e13bf75280 t/04misc.t
@@ -49,7 +49,7 @@ SHA1 53b8ace91aa1575b68dc9c48e7dffbf8a74ac765 t/12placeholders.t
 SHA1 85b5df8ef0c78b1d2d0018d874c62af7ef01a28f t/20savepoints.t
 SHA1 711a85cb938c6aa8a2b4200c0836a7caa397bf9f t/99_perlcritic.t
 SHA1 9487888f49204c35be2e46a8f1d0142859010e4f t/99_pod.t
-SHA1 5b87b2a2f3322d2153d4c9cb459e615e8d96ed30 t/99_spellcheck.t
+SHA1 bd1fbc8f54778cf2a559a8b96547c6cf1f17e3a4 t/99_spellcheck.t
 SHA1 ace40437561196dc6a08b5e725de35aed0e9902c t/99_yaml.t
 SHA1 60031c2db489d77291078ab6a418723e1a35f137 t/99cleanup.t
 SHA1 60cf270e00de00da24376101dfedc4ad999ae09b t/dbdpg_test_setup.pl
@@ -65,7 +65,7 @@ SHA1 144146d529684b716165811e687bea6a930c361c types.h
 SHA1 f07cd5ecaeb854c81ceb9206364979cf607e6546 win32.mak
 -----BEGIN PGP SIGNATURE-----
 
-iEYEAREDAAYFAknIQvkACgkQvJuQZxSWSsgUCQCg8+hzfGlhLEpKvmY198hYBWYC
-/CIAnj3w8M7TynQUUD7GIyp7O2rjm1q6
-=g+ST
+iEYEAREDAAYFAknLzm8ACgkQvJuQZxSWSsj9hwCfYkdE8K2ViV/RIRXvAuygniBp
+36oAnAgsHhzBySX9s7H7S1ugIYkzNucf
+=7WTk
 -----END PGP SIGNATURE-----
