@@ -1,6 +1,6 @@
 /*
 
-  $Id: dbdimp.c 12626 2009-03-24 00:59:45Z turnstep $
+  $Id: dbdimp.c 12635 2009-03-26 16:16:10Z turnstep $
 
   Copyright (c) 2002-2009 Greg Sabino Mullane and others: see the Changes file
   Portions Copyright (c) 2002 Jeffrey W. Baker
@@ -2574,9 +2574,9 @@ static SV * pg_destringify_array(pTHX_ imp_dbh_t *imp_dbh, unsigned char * input
 			}
 			else {
 				if (1 == coltype->svtype)
-					av_push(currentav, newSViv(SvIV(newSVpvn(string,section_size))));
+					av_push(currentav, newSViv(SvIV(sv_2mortal(newSVpvn(string,section_size)))));
 				else if (2 == coltype->svtype)
-					av_push(currentav, newSVnv(SvNV(newSVpvn(string,section_size))));
+					av_push(currentav, newSVnv(SvNV(sv_2mortal(newSVpvn(string,section_size)))));
 				else if (3 == coltype->svtype)
 					av_push(currentav, newSViv('t' == *string ? 1 : 0));
 				else {
