@@ -1560,7 +1560,7 @@ SKIP: {
 			$sth->execute(1);
 			my $val = $sth->fetchall_arrayref()->[0][0];
 			is ($val, $answer, $t);
-			# Let the child exit
+			# Let the child exit first
 			select(undef,undef,undef,0.3);
 		}
 		else { # Child
